<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".UserActivity.SignupActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="460dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="42dp">

        <LinearLayout
            android:id="@+id/pP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registerInputUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:hint="@string/userName"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/registerInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/registerInputAccType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:hint="@string/storeName"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/registerInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/registerInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/profile_p"
                android:src="@drawable/profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signupPPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Upload"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="already have an account? "
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/goto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:paddingStart="10dp"
                    android:text="Log In"
                    android:textColor="@color/link"
                    android:textSize="20sp" />

            </LinearLayout>


            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttons"
                android:backgroundTint="@color/black"
                android:text="Sign Up"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>